qc pass: ouni ibgp rr prefix withdraw
qc pass: olab ibgp rr prefix withdraw
qc pass: ibgp rr vpns prefix withdraw
qc pass: ibgp rr othervpns prefix withdraw
qc pass: olab ibgp fullmesh prefix withdraw
---------------------------------- 2022-04-01 05:31:47 22.4.1
qc pass: ebgp with safe policy
qc pass: ibgp with safe policy
qc pass: confed bgp with safe policy
qc pass: ibgp rr with safe policy
qc pass: bgp route server with safe policy
qc pass: safe ebgp policy with prefixlist
qc pass: safe ebgp policy with routemap
qc pass: safe ebgp policy with routepolicy
---------------------------------- 2022-04-03 05:44:11 22.4.3
qc pass: llcudp over ipv4
qc pass: llcudp over ipv6
qc pass: llcudp over loopback
qc pass: hdlc tunneling with llcudp
qc pass: ppp tunneling with llcudp
qc pass: lapb tunneling with llcudp
qc pass: framerelay tunneling with llcudp
qc pass: atmdxi tunneling with llcudp
qc pass: isdn tunneling with llcudp
qc pass: sep tunneling with llcudp
qc pass: ethernet tunneling with llcudp
qc pass: vlan tunneling with llcudp
qc pass: tunnel interface with llcudp
qc pass: tzsp over ipv4
qc pass: tzsp over ipv6
qc pass: tzsp over loopback
qc pass: hdlc tunneling with tzsp
qc pass: ppp tunneling with tzsp
qc pass: lapb tunneling with tzsp
qc pass: framerelay tunneling with tzsp
qc pass: atmdxi tunneling with tzsp
qc pass: isdn tunneling with tzsp
qc pass: sep tunneling with tzsp
qc pass: ethernet tunneling with tzsp
qc pass: vlan tunneling with tzsp
qc pass: tunnel interface with tzsp
---------------------------------- 2022-04-10 10:09:04 22.4.10
qc pass: bridge port split horizon
qc pass: bridge port unsplit horizon
---------------------------------- 2022-04-12 16:04:05 22.4.12
todo: tcpmss on bridges
todo: allow command to be a substring of an other
---------------------------------- 2022-04-12 17:33:21 22.4.12
no todo: tcpmss on bridges
---------------------------------- 2022-04-14 08:36:56 22.4.14
todo: readvertise knob under routers