@@ -37,11 +37,11 @@
                 -middleware &lt;text&gt;<br/>
                 -hardware &lt;text&gt;<br/>
                 -kernel &lt;text&gt;<br/>
-                -needaddr true/false true/false<br/>
+                -needaddr &lt;true/false&gt &lt;true/false&gt<br/>
                 -myaddr &lt;ipv4&gt; &lt;ipv6&gt;<br/>
                 -youraddr &lt;ipv4&gt; &lt;ipv6&gt;<br/>
                 -yourid &lt;num&gt;<br/>
-                -nomore;<br/>
+                -nomore<br/>
                 -echo &lt;text&gt;<br/>
                 -echoed &lt;text&gt;<br/>
                 -endpoint_add &lt;parameters&gt;<br/>
