@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.4.14-cur, done by cs@nop.
--;-;-;2022-04-14 12:19:11, took 00:09:49, with 80 workers, on 2832 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2022-04-14 21:52:17, took 00:09:59, with 80 workers, on 2832 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.freertr.net/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.net/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
