@@ -2830,6 +2830,7 @@ qc pass: socks4 server
 qc pass: socks5 server
 qc pass: tacacs server
 qc pass: udp forwarder server
+todo: rt4/6import/export under vrfs
 todo: readvertise knob under routers
 todo: allow command to be a substring of an other
 todo: quic
