@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.4.14-cur, done by cs@nop.<br/>
-tested: 2022-04-14 12:19:11, took 00:09:49, with 80 workers, on 2832 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2022-04-14 21:52:17, took 00:09:59, with 80 workers, on 2832 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
